--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ out/
 ### NPM ###
 src/main/resources/static/node_modules
 src/main/resources/static/node
+
+### my ignore ###
+src/main/resources/application.yml
