--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,10 +16,17 @@ spring:
       max-file-size: 50MB
       max-request-size: 50MB
 
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
+
 property:
   video:
     url: /Users/joohyuk/Movies/
     uploadFolder: upload_video/
+
+
 ---
 spring:
   profiles: test
