--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,10 +1,12 @@
 spring:
+  profiles: test
+
   mvc:
     hiddenmethod:
       filter:
         enabled: true
 
-  servlet햣:
+  servlet:
     multipart:
       max-file-size: 50MB
       max-request-size: 50MB
