--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,21 @@ cache:
 
 script: "./gradlew clean build"
 
+before_deploy:
+  - zip -r jootube *
+  - mkdir -p deploy
+  - mv jootube.zip deploy/jootube.zip
+
+deploy:
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: weekbelt-springboot-build
+    region: ap-northeast-2
+    skip_cleanup: true
+    acl: private
+    local_dir: deploy
+    wait-until-deployed: true
 # CI 실행 완료 시 메일로 알람
 notifications:
   email:
