refactor: Linking Travis CI & S3 & CodeDeploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,18 @@ deploy:
     acl: private
     local_dir: deploy
     wait-until-deployed: true
+
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: weekbelt-springboot-build
+    key: jootube.zip
+    bundle_type: zip
+    application: jootube
+    deployment_group: jootube-group
+    region: ap-northeast-2
+    wait-until-deployed: true
+    
 # CI 실행 완료 시 메일로 알람
 notifications:
   email:
