--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,13 @@ cache:
 script: "./gradlew clean build"
 
 before_deploy:
-  - zip -r jootube *
-  - mkdir -p deploy
-  - mv jootube.zip deploy/jootube.zip
+  - mkdir -p before-deploy
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+  - cp before-deploy && zip -r before-deploy *
+  - cd ../ && mkdir -p deploy
+  - mv before-deploy/before-deploy.zip deploy/jootube.zip
 
 deploy:
   - provider: s3
@@ -40,7 +44,7 @@ deploy:
     deployment_group: jootube-group
     region: ap-northeast-2
     wait-until-deployed: true
-    
+
 # CI 실행 완료 시 메일로 알람
 notifications:
   email:
