refactor: file upload & Add FileInfo Entity

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -28,4 +28,4 @@ property:
     uploadVideoFolder: upload_video/
   image:
     url: /Users/joohyuk/Pictures/
-    uploadThumbnailFolder: upload_thumbnail/
+    uploadImageFolder: upload_image/
